# inji-issuer-deploy

./: .gitignore  CLAUDE.md  README.md  inji-deploy-state.json  proposed architecture.docx  pyproject.toml
docs/: onprem-first-real-runbook.md  onprem-mvp.md  onprem-ubuntu-vps.md
docs/examples/: README.md  onprem-example-state.json  onprem-simulation.md
inji_issuer_deploy/: bootstrap.py  cli.py  cloud.py  orchestrator.py  state.py  webapp.py
inji_issuer_deploy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
inji_issuer_deploy/phases/: aws_infra.py  collect.py  config_gen.py  infra.py  k8s_deploy.py  register.py
inji_issuer_deploy/providers/: aws.py  azure.py  gcp.py  onprem.py
inji_issuer_deploy/webui/: app.jsx  index.html  styles.css
terraform/: README.md  main.tf  outputs.tf  variables.tf
tests/: test_bootstrap.py  test_cloud_providers.py  test_docs_runbook.py  test_issuer_deploy.py  test_onprem_example.py  test_preflight.py  test_webapp.py
