[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inji-issuer-deploy"
version = "0.1.0"
description = "CLI tool to deploy a new Inji VC issuer replicating the RENIEC stack"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "jinja2>=3.1",
    "boto3>=1.34",
    "kubernetes>=29.0",
    "httpx>=0.27",
    "rich>=13.7",
    "pyyaml>=6.0",
    "minio>=7.2",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[project.scripts]
inji-issuer-deploy = "inji_issuer_deploy.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["inji_issuer_deploy*"]

[tool.setuptools.package-data]
inji_issuer_deploy = ["webui/*"]
